--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "importHelpers": true,
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "bundler",
     "declaration": true,
     "declarationMap": false,
     "emitDeclarationOnly": false,
+    "sourceMap": true,
     "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
