--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "exports": {
     "import": "./dist/index.js",
     "require": "./dist/index.cjs",
+    "./style/placeholder.css": "./style/placeholder.css",
     "types": "./dist/index.d.ts"
   },
   "files": [
