--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs",
-    "./style/placeholder.css": "./style/placeholder.css",
-    "types": "./dist/index.d.ts"
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./style/placeholder.css": "./style/placeholder.css"
   },
   "files": [
     "dist",
